--- a/covid_cases_chart.html
+++ b/covid_cases_chart.html
@@ -2,125 +2,99 @@
 <head>
 <meta charset="utf-8">
 <title>Covid Cases Chart</title>
-<script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
-<style></style>
 </head>
 <body>
-<div id="container" class="svg-container"></div>
+<svg id="chart" width="960" height="500"></svg>
+<script src="https://d3js.org/d3.v5.min.js"></script>
 <script>
-//------------------------1. PREPARATION------------------------//
 //-----------------------------SVG------------------------------//
-const width = 960;
-const height = 500;
-const margin = 5;
-const padding = 5;
-const adj = 30;
-// we are appending SVG first
-const svg = d3.select("div#container").append("svg")
-    .attr("preserveAspectRatio", "xMinYMin meet")
-    .attr("viewBox", "-"
-          + adj + " -"
-          + adj + " "
-          + (width + adj *3) + " "
-          + (height + adj*3))
-    .style("padding", padding)
-    .style("margin", margin)
-    .classed("svg-content", true);
+var svg = d3.select("svg"),
+    margin = {top: 20, right: 80, bottom: 30, left: 50},
+    width = svg.attr("width") - margin.left - margin.right,
+    height = svg.attr("height") - margin.top - margin.bottom,
+    g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+var x = d3.scaleLinear().range([0, width]),
+    y = d3.scaleLinear().range([height, 0]),
+    z = d3.scaleOrdinal(d3.schemeCategory10);
+
+var line = d3.line()
+    .curve(d3.curveBasis)
+    .x(function(d) { return x(d.DaysSince100); })
+    .y(function(d) { return y(d.TotalCases); });
 
 //-----------------------------DATA-----------------------------//
-const timeConv = d3.timeParse("%d-%b-%Y");
-const dataset = d3.csv("data.csv");
-dataset.then(function(data) {
-    var slices = data.columns.slice(1).map(function(id) {
+var parseTime = d3.timeParse("%b %d, %Y");
+var dataset = d3.csv("covid-confirmed-cases-since-100th-case.csv", function(error, data) {
+    if (error) throw error;
+// based on the structure of my dataset, wrote my own code to parse it appropriately
+// see return_distinct_rows_select_cols.js for the code I had to iteratively test to figure this out
+// no prior javascript experience, I repeat, no prior javascript experience
+    var result = Array.from(new Set(data.map(s => s.Entity))).map(Entity => { // for each distinct entity
         return {
-            id: id,
-            values: data.map(function(d){
+            Entity: Entity, // return entity
+            values: data.filter(s => s.Entity == Entity).map(function(obj) {
                 return {
-                    date: timeConv(d.date),
-                    measurement: +d[id]
+                    Date: parseTime(obj.Date), // parse date
+                    TotalCases: obj["Total confirmed cases (cases)"],
+                    DaysSince100: obj["Days since the 100th total confirmed case (days)"]
                 };
-            })
-        };
+            }) // return only the columns for each row that matches the distinct name
+        }
     });
    
 //----------------------------SCALES----------------------------//
-const xScale = d3.scaleTime().range([0,width]);
-const yScale = d3.scaleLinear().rangeRound([height, 0]);
-xScale.domain(d3.extent(data, function(d){
-    return timeConv(d.date)}));
-yScale.domain([(0), d3.max(slices, function(c) {
-    return d3.max(c.values, function(d) {
-        return d.measurement + 4; });
-        })
+// need to be updated to match chart we are re-creating
+// x is Days since 100th confirmed case
+// y is total confirmed cases
+    x.domain(d3.extent(data, function(d) { return d.DaysSince100; }));
+
+    y.domain([
+    d3.min(result, function(c) { return d3.min(c.values, function(d) { return d.TotalCases; }); }),
+    d3.max(result, function(c) { return d3.max(c.values, function(d) { return d.TotalCases; }); })
     ]);
+
+    z.domain(result.map(function(c) { return c.Entity; }));
    
 //-----------------------------AXES-----------------------------//
-const yaxis = d3.axisLeft()
-    .ticks((slices[0].values).length)
-    .scale(yScale);
-   
-const xaxis = d3.axisBottom()
-    .ticks(d3.timeDay.every(1))
-    .tickFormat(d3.timeFormat('%b %d'))
-    .scale(xScale);
-   
-//----------------------------LINES-----------------------------//
-const line = d3.line()
-    .x(function(d) { return xScale(d.date); })
-    .y(function(d) { return yScale(d.measurement); });
+    g.append("g")
+      .attr("class", "axis axis--x")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.axisBottom(x));
 
-let id = 0;
-const ids = function () {
-    return "line-"+id++;
-}  
+    g.append("g")
+      .attr("class", "axis axis--y")
+      .call(d3.axisLeft(y))
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", "0.71em")
+      .attr("fill", "#000")
+      .text("Temperature, ºF");
+
+//----------------------------LINES-----------------------------//
+    var entity = g.selectAll(".entity")
+    .data(result)
+    .enter().append("g")
+      .attr("class", "entity");
+
+  entity.append("path")
+      .attr("class", "line")
+      .attr("d", function(d) { return line(d.values); })
+      .style("stroke", function(d) { return z(d.entity); });
+
+  entity.append("text")
+      .datum(function(d) { return {entity: d.entity, value: d.values[d.values.length - 1]}; })
+      .attr("transform", function(d) { return "translate(" + x(d.value.DaysSince100) + "," + y(d.value.TotalCases) + ")"; })
+      .attr("x", 3)
+      .attr("dy", "0.35em")
+      .style("font", "10px sans-serif")
+      .text(function(d) { return d.entity; });
 
 //---------------------------TOOLTIP----------------------------//
 
-
-//-------------------------2. DRAWING---------------------------//
-//-----------------------------AXES-----------------------------//
-svg.append("g")
-    .attr("class", "axis")
-    .attr("transform", "translate(0," + height + ")")
-    .call(xaxis);
-   
-svg.append("g")
-    .attr("class", "axis")
-    .call(yaxis)
-    .append("text")
-    .attr("transform", "rotate(-90)")
-    .attr("dy", ".75em")
-    .attr("y", 6)
-    .style("text-anchor", "end")
-    .text("Frequency");
-   
-//----------------------------LINES-----------------------------//
-const lines = svg.selectAll("lines")
-    .data(slices)
-    .enter()
-    .append("g");
-   
-    lines.append("path")
-    .attr("class", ids)
-    .attr("d", function(d) { return line(d.values); });
-   
-    lines.append("text")
-    .attr("class","serie_label")
-    .datum(function(d) {
-        return {
-            id: d.id,
-            value: d.values[d.values.length - 1]}; })
-    .attr("transform", function(d) {
-            return "translate(" + (xScale(d.value.date) + 10)  
-            + "," + (yScale(d.value.measurement) + 5 )+ ")"; })
-    .attr("x", 5)
-    .text(function(d) { return ("Serie ") + d.id; });
-
-//---------------------------POINTS-----------------------------// 
-
-//---------------------------EVENTS-----------------------------// 
-   
 });
 </script>
 </body>
+</html>
