--- a/covid_final.html
+++ b/covid_final.html
@@ -112,7 +112,7 @@ console.log(x, result)
             return line(d.values);
         })
         .style("stroke", function (d) {
-            return z(d.entity);
+            return z(d.Entity);
         });
     // entity.append("text")
     //     .datum(function (d) {
